eclat-compiler/tests/bad/abstract_type_decl/s2.ecl
type t ;;

let main (x:bool t) = x ;;

(* ==============================
   file tests/bad/abstract_type_decl/s2.ecl, line 3, characters 17-18:
   Error: type t expects 0 type parameter 
   ============================== *)